--- a/experiments/baselines/baseline-mobilenetv2.ipynb
+++ b/experiments/baselines/baseline-mobilenetv2.ipynb
@@ -228,11 +228,11 @@
     "    return class_counts\n",
     "\n",
     "# Path to the dataset\n",
-    "dataset_path = pathlib.Path('dataset')  # Modify to the correct path\n",
+    "dataset_path = pathlib.Path('img_ds_clean_aug')  # Modify to the correct path\n",
     "\n",
     "# Download and unzip the dataset, if necessary\n",
     "if not dataset_path.exists():\n",
-    "    os.system('gdown 12IYith_b2z_TIHfAAFHrdP25w1IdF_zQ -O dataset_keypoints_yoga.zip') # Drive ID\n",
+    "    os.system('gdown 1RE360_MkKZsbhovRQc_9jGnVZbdGCvcv -O dataset_keypoints_yoga.zip') # Drive ID\n",
     "    os.system('unzip -q dataset_keypoints_yoga.zip')\n",
     "\n",
     "# Count files in each class\n",
